# DKLs23

./: .geminiignore  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  test_add.rs  test_impl  test_k256.rs  test_vis  test_vis2
.devcontainer/: devcontainer.json  docker-compose.yml
.github/actions/spelling/: allow.txt  excludes.txt  expect.txt  patterns.txt
.github/workflows/: backend-audit.yml  backend-ci.yml  check-spelling.yml  clippy.yml  fmt-check.yml  unmaintained.yml
dkls23/: Cargo.toml  README.md
dkls23-core/: Cargo.toml  README.md
dkls23-core/src/: curve.rs  lib.rs  protocols.rs
dkls23-core/src/protocols/: derivation.rs  dkg.rs  dkg_session.rs  messages.rs  re_key.rs  refresh.rs  sign_session.rs  signature.rs  signing.rs
dkls23-core/src/utilities/: commits.rs  hashes.rs  multiplication.rs  oracle_tags.rs  proofs.rs  rng.rs  zero_shares.rs
dkls23-core/src/utilities/ot/: base.rs  extension.rs
dkls23-secp256k1/: Cargo.toml  README.md
dkls23-secp256k1/src/: lib.rs
dkls23-secp256r1/: Cargo.toml  README.md
dkls23-secp256r1/src/: lib.rs
dkls23/src/: lib.rs
docs/: architecture.md  domain-separation-v1.md  security.md
src/: lib.rs  protocols.rs  utilities.rs
src/protocols/: derivation.rs  dkg.rs  dkg_session.rs  export.rs  get_party_store.rs  load_party.rs  load_party_store.rs  messages.rs  re_key.rs  refresh.rs  sign_session.rs  signing.rs
src/utilities/: commits.rs  hashes.rs  hkdf_helper.rs  multiplication.rs  oracle_tags.rs  ot.rs  ot_base.rs  proofs.rs  rng.rs  zero_shares.rs  zero_sharings.rs
src/utilities/ot/: base.rs  extension.rs  ot_base.rs  ot_extension.rs
