[package]
name = "dkls23"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
k256 = { version = "0.13", features = ["serde"] }
bitcoin_hashes = "0.13"
sha3 = "0.10"
rand = "0.8"
getrandom = "0.2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.12"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[features]
insecure-rng = []
