[package]
name = "dkls23"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DKLs23 Threshold ECDSA in Three Rounds"
repository = "https://github.com/0xCarbon/DKLs23"
readme = "README.md"

[dependencies]
k256 = { version = "0.14.0-rc.7", features = ["serde"] }
bitcoin_hashes = "0.16"
sha3 = "0.10"
rand = "0.10"
hex = "0.4"
bincode = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.12"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.4"
features = ["wasm_js"]

[features]
insecure-rng = []
