[package]
name = "dkls23"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DKLs23 Threshold ECDSA in Three Rounds"
repository = "https://github.com/0xCarbon/DKLs23"
readme = "README.md"

[dependencies]
k256 = { version = "0.14.0-rc.7" }
bitcoin_hashes = "0.16"
sha3 = "0.10"
rand = "0.10"
hex = "0.4"
bincode = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.12", optional = true }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.4"
features = ["wasm_js"]

[dev-dependencies]
serde_json = "1"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_bytes", "dep:bincode", "k256/serde"]
insecure-rng = []
