[package]
name = "dkls23-core"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DKLs23 Threshold ECDSA — curve-generic core"
repository = "https://github.com/0xCarbon/DKLs23"

[dependencies]
elliptic-curve = { version = "0.14.0-rc.4", features = ["arithmetic", "sec1"] }
rustcrypto-ff = "0.14.0-rc.0"
rustcrypto-group = "0.14.0-rc.0"
ecdsa = { version = "0.17.0-rc.2" }
k256 = { version = "0.14.0-rc.7" }
bitcoin_hashes = "0.16"
sha3 = "0.10"
rand = "0.10"
hex = "0.4"
bincode = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.12", optional = true }
zeroize = { version = "1", features = ["derive"] }
subtle = "2.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.4"
features = ["wasm_js"]

[dev-dependencies]
serde_json = "1"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_bytes", "dep:bincode", "k256/serde"]
insecure-rng = []
