[package]
name = "dkls23-secp256k1"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DKLs23 Threshold ECDSA — secp256k1 / Ethereum"
repository = "https://github.com/0xCarbon/DKLs23"

[dependencies]
dkls23-core = { version = "0.5", path = "../dkls23-core" }
elliptic-curve = { version = "0.14.0-rc.4", features = ["sec1"] }
rustcrypto-group = "0.14.0-rc.0"
k256 = { version = "0.14.0-rc.7" }
sha2 = "0.11.0-rc.5"
sha3 = "0.11.0-rc.8"
keccak = "0.2"
ripemd = "0.2.0-rc.5"
hex = "0.4"
bech32 = "0.11"
bs58 = "0.5"

[dev-dependencies]
rustcrypto-group = "0.14.0-rc.0"

[features]
default = ["serde"]
serde = ["dkls23-core/serde", "k256/serde"]
insecure-rng = ["dkls23-core/insecure-rng"]
