[package]
name = "dkls23"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DKLs23 Threshold ECDSA in Three Rounds"
repository = "https://github.com/0xCarbon/DKLs23"
readme = "../README.md"

[dependencies]
dkls23-secp256k1 = { path = "../dkls23-secp256k1" }

[features]
default = ["serde"]
serde = ["dkls23-secp256k1/serde"]
insecure-rng = ["dkls23-secp256k1/insecure-rng"]
