[package]
name = "dkls23"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DEPRECATED — use dkls23-secp256k1 or dkls23-secp256r1 instead"
repository = "https://github.com/0xCarbon/DKLs23"
readme = "README.md"

[dependencies]
dkls23-secp256k1 = { version = "0.5", path = "../dkls23-secp256k1" }

[features]
default = ["serde"]
serde = ["dkls23-secp256k1/serde"]
insecure-rng = ["dkls23-secp256k1/insecure-rng"]
